fix: убрать свойство text-align: justify у todo

--- a/blocks/todo/__text/todo__text.css
+++ b/blocks/todo/__text/todo__text.css
@@ -3,7 +3,6 @@
   flex-grow: 1;
   text-align: start;
   font-size: 23px;
-  text-align: justify;
 }
 
 @media (max-width: 768px) {
